--- a/Config/Config.csproj
+++ b/Config/Config.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{ED50A8DB-7CE6-4227-98DF-6D1DF817C20B}</ProjectGuid>
+    <ProjectGuid>{29B615FD-B794-4245-94D0-0DA241B5D94F}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>ImageSearcher</RootNamespace>
-    <AssemblyName>ImageSearcher</AssemblyName>
+    <RootNamespace>Config</RootNamespace>
+    <AssemblyName>Config</AssemblyName>
     <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
@@ -24,7 +24,7 @@
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
-    <Optimize>false</Optimize>
+    <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
@@ -41,13 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Flickr\FlickerImageService.cs" />
-    <Compile Include="Flickr\FlickerResponseProcessor.cs" />
-    <Compile Include="Flickr\FlickerSearchResponse.cs" />
-    <Compile Include="HttpClient.cs" />
-    <Compile Include="IImageSearcher.cs" />
-    <Compile Include="IImageServiceFactory.cs" />
-    <Compile Include="ImageServiceFactory.cs" />
+    <Compile Include="Config.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
