--- a/ImageSearcher/ImageSearcher.csproj
+++ b/ImageSearcher/ImageSearcher.csproj
@@ -31,8 +31,14 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="log4net, Version=2.0.15.0, Culture=neutral, PublicKeyToken=669e0ddf0bb1aa2a, processorArchitecture=MSIL">
+      <HintPath>..\packages\log4net.2.0.15\lib\net45\log4net.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Web" />
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -45,10 +51,25 @@
     <Compile Include="Flickr\FlickerResponseProcessor.cs" />
     <Compile Include="Flickr\FlickerSearchResponse.cs" />
     <Compile Include="HttpClient.cs" />
-    <Compile Include="IImageSearcher.cs" />
+    <Compile Include="IImageSearchService.cs" />
     <Compile Include="IImageServiceFactory.cs" />
     <Compile Include="ImageServiceFactory.cs" />
+    <Compile Include="ISearchController.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SearchController.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Browser\Browser.csproj">
+      <Project>{57966e44-41e4-46e1-a0b8-893f0b3c7303}</Project>
+      <Name>Browser</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Config\Config.csproj">
+      <Project>{29b615fd-b794-4245-94d0-0da241b5d94f}</Project>
+      <Name>Config</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
