--- a/Browser/Browser.csproj
+++ b/Browser/Browser.csproj
@@ -33,6 +33,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="log4net, Version=2.0.15.0, Culture=neutral, PublicKeyToken=669e0ddf0bb1aa2a, processorArchitecture=MSIL">
+      <HintPath>..\packages\log4net.2.0.15\lib\net45\log4net.dll</HintPath>
+    </Reference>
     <Reference Include="Microsoft.Web.WebView2.Core, Version=1.0.1462.37, Culture=neutral, PublicKeyToken=2a8ab48044d2601e, processorArchitecture=MSIL">
       <HintPath>..\packages\Microsoft.Web.WebView2.1.0.1462.37\lib\net45\Microsoft.Web.WebView2.Core.dll</HintPath>
     </Reference>
@@ -45,7 +48,9 @@
     <Reference Include="PresentationCore" />
     <Reference Include="PresentationFramework" />
     <Reference Include="System" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Web" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -55,12 +60,12 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="BrowserFactory.cs" />
-    <Compile Include="CallsToJs.cs" />
+    <Compile Include="Browser\BrowserFactory.cs" />
+    <Compile Include="JavaScriptCalls\CallsToJs.cs" />
     <Compile Include="EdgeChromium\EdgeChromiumBrowser.cs" />
-    <Compile Include="IBrowser.cs" />
-    <Compile Include="IBrowserFactory.cs" />
-    <Compile Include="ICallsToJs.cs" />
+    <Compile Include="Browser\IBrowser.cs" />
+    <Compile Include="Browser\IBrowserFactory.cs" />
+    <Compile Include="JavaScriptCalls\ICallsToJs.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
