--- a/Browser/packages.config
+++ b/Browser/packages.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="log4net" version="2.0.15" targetFramework="net48" />
   <package id="Microsoft.Web.WebView2" version="1.0.1462.37" targetFramework="net48" />
 </packages>
